<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CreateMeetingActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_subject"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:endIconMode="clear_text"
        app:helperText="Required"
        app:helperTextTextColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_meeting_topic_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subject" />

    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spinner_room"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout_subject"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout_subject"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_subject"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_date"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minWidth="105dp"
        app:helperText="Required"
        app:helperTextTextColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_room"
        app:startIconDrawable="@drawable/ic_edit_calendar_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:hint="@string/date" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_startingTime"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:helperText="Required"
        app:helperTextTextColor="@color/red"
        app:layout_constraintEnd_toStartOf="@+id/textInputLayout_finishingTime"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_date"
        app:startIconDrawable="@drawable/ic_access_time_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_startingTime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:hint="@string/starting_time" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_finishingTime"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        app:helperText="Required"
        app:helperTextTextColor="@color/red"
        app:layout_constraintBaseline_toBaselineOf="@+id/textInputLayout_startingTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/textInputLayout_startingTime"
        app:startIconDrawable="@drawable/ic_access_time_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_finishingTime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:hint="@string/finishing_time" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        app:errorEnabled="true"
        app:helperText="Required"
        app:helperTextTextColor="@color/red"
        app:layout_constraintEnd_toStartOf="@+id/button_email_ok"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_startingTime"
        app:startIconDrawable="@drawable/ic_attach_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/attach_email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_email_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/validate"
        app:layout_constraintBaseline_toBaselineOf="@+id/textInputLayout_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/textInputLayout_email" />

    <HorizontalScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/button_createMeeting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_email"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="64dp"
            tools:layout_editor_absoluteY="426dp">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup_participantsEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:singleLine="true" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </HorizontalScrollView>

    <Button
        android:id="@+id/button_createMeeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/create_meeting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>