<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_filterIcon"
        android:icon="@drawable/ic_filter_list_24"
        android:title="@string/filter_icon"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menuItem_date"
                android:title="@string/date" />
            <item
                android:id="@+id/menuItem_room"
                android:title="@string/room" />
            <item
                android:id="@+id/menuItem_reset"
                android:title="@string/reset" />
        </menu>
    </item>
</menu>